fixed overflow issue inside <pre> tags

--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,12 @@ body {
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
 
+pre { white-space: pre-wrap !important; }
+
 a         { color: #2a7ae2; text-decoration: none; }
 a:hover   { color: #000; text-decoration: underline; }
 a:visited { color: #205caa; }
+
 
 /* Utility */
 
